<resources>
    <string name="app_name">Smart UFPA</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_about">Sobre o aplicativo</string>
    <string name="title_settings">Configurações</string>
    <string name="title_select_category">Categorias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_subheader">LabVis - UFPA</string>
    <string name="drawer_subtitle">ICEN - Faculdade de Computação</string>
    <string name="action_add_location">Adicione um lugar ao Mapa</string>
    <string name="action_search">Busca</string>
    <string name="tutorial_msg_search">Use a lupa para buscar locais no Campus da UFPA.</string>
    <string name="tutorial_msg_menu">Ao abrir o menu, selecione um tipo de serviço e veja onde ele é ofertado.</string>
    <string name="tutorial_msg_current_location">Clique aqui para mover a câmera para sua localização atual.</string>
    <string name="tutorial_msg_bus_location">Clique aqui para consultar a última localização do circular.\n <b>Note que esse serviço ainda se encontra em teste.</b></string>
    <string name="tutorial_msg_add_location">Clique aqui para criar um registro a um local não cadastrado no mapa.</string>
    <string name="error_no_internet_connection">Cheque sua conexão com a internet e tente novamente.</string>
    <string name="error_server_internal_error">Não foi possível completar a operação. Tente novamente.</string>
    <string name="error_server_timeout">Tempo de requisição esgotado. Tente novamente em alguns segundos.</string>
    <string name="error_no_gps_title">Localização Desligada</string>
    <string name="error_no_gps_subtitle">O Localizador deve estar ligado \n para que possamos mostrar sua posição no mapa.</string>
    <string name="error_fragment_no_input">Você deve inserir uma entrada.</string>
    <string name="error_fragment_input_too_long">A entrada inserida é muito longa.</string>
    <string name="error_fragment_input_too_short">A entrada inserida é muito curta.</string>
    <string name="error_fragment_select_valid_option">Selecione uma opção válida.</string>
    <string name="error_fragment_create_other">Adicione um tipo novo.</string>
    <string name="error_fragment_invalid_character">A entrada deve conter apenas letras e números.</string>
    <string name="msg_click_marker">Clique no marcador para rotas.</string>
    <string name="msg_bus_last_known_location">Última localização conhecida. Pode não estar atualizada.</string>
    <string name="msg_bus_updated_location">Localização atualizada.</string>
    <string name="msg_loading_current_position">Carregando sua posição atual.</string>
    <string name="msg_out_of_covered_region">Você está fora da região coberta pelo nosso mapa!</string>
    <string name="msg_drag_marker">Segure o marcador para arrastá-lo ao local desejado.</string>
    <string name="msg_turn_on_gps">Por favor, ligar o GPS novamente.</string>
    <string name="msg_no_results_found">Sua busca não retornou nenhum resultado. Cheque a ortografia e tente de novo.</string>
    <string name="nav_auditorium">Auditórios</string>
    <string name="nav_restrooms">Banheiros</string>
    <string name="nav_food">Refeições</string>
    <string name="nav_bus_route">Ônibus Universitário</string>
    <string name="nav_copy_service">Xerox</string>
    <string name="nav_libraries">Bibliotecas</string>
    <string name="map_download_executed">map_download_executed</string>
    <string name="map_download_url">https://www.smartufpa.ufpa.br/map-download.php</string>
    <string name="input_fragment_name">Nome</string>
    <string name="input_fragment_local_name">Nome Local/Nome não-oficial</string>
    <string name="input_fragment_short_name">Abreviação</string>
    <string name="input_fragment_description">Descrição</string>
    <string name="input_fragment_other">Outro</string>
    <string name="btn_fragment_clear">Limpar o Mapa</string>
    <string name="btn_fragment_cancel">Cancelar</string>
    <string name="btn_fragment_confirm">Confirmar</string>
    <string name="btn_foot_route">Mostrar Caminho</string>
    <string name="btn_settings">Configurações</string>
    <string name="btn_ready">Pronto!</string>
    <string name="btn_exit">Sair</string>
    <string name="btn_grant_permissions">Conceder Permissões</string>
    <string name="btn_mobility">Mobilidade e Localização</string>
    <string name="btn_oportunities">Oportunidades</string>
    <string name="btn_safety">Segurança</string>
    <string name="btn_alimentation">Alimentação</string>
    <string name="btn_events">Eventos e informações</string>
    <string name="btn_accessibility">Acessibilidade</string>
    <string name="lbl_place_description">Descrição:</string>
    <string name="lbl_search_result_title">Resultados</string>
    <string name="lbl_place_details">Detalhes</string>
    <string name="lbl_placeholder">PlaceHolder Text</string>
    <string name="lbl_local_name">Nome local:</string>
    <string name="lbl_about_title">Sobre Nós</string>
    <string name="tutorial_map_executed">tutorial_executed</string>
    <string name="search_hint">Busque na UFPA</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc dui tellus, lacinia non ipsum vel, interdum varius nulla. Curabitur ultrices ipsum at porta placerat.</string>
    <string name="btn_login_visitante">Visitante</string>
    <string name="btn_login_login">Realizar Login</string>
    <string name="msg_routes_limit">Limpe o mapa antes de calcular uma nova rota.</string>
    <string name="btn_rate_info">Avalie Estas Informações</string>
    <string name="about_lbl_coord">Coordenadores do projeto:</string>
    <string name="about_lbl_ana">Ana Régia de Mendonça Neves</string>
    <string name="about_lbl_bianchi">Bianchi Serique Meiguins</string>
    <string name="about_lbl_desenv">Desenvolvedor:</string>
    <string name="about_txt_kae">Kaê Uchôa Sarmanho</string>
    <string name="about_txt_version">Smart UFPA Versão 1.0</string>
    <string name="about_txt_labvis">Laboratório de Visualização (LABVIS)</string>
    <string name="about_txt_ufpa">Universidade Federal do Pará</string>
    <string name="about_lbl_logo">Artes feitas por:</string>
    <string name="about_txt_giordana">Giordanna De Gregoriis</string>
    <string name="about_txt_port_gio">http://gior.hol.es/</string>
    <string name="about_lbl_more">Mais informações:</string>
    <string name="about_txt_site">http://facebook.com/smart.campus.ufpa</string>
    <string name="add_place_subtitle_details">Insira os detalhes sobre o local</string>
    <string name="add_place_subtitle_categories">Selecione uma categoria</string>
    <string name="about_lbl_map">Cartografia:</string>
    <string name="about_txt_map">©contribuidores do OpenStreetMap</string>
    <string name="about_lbl_libs">Bibliotecas usadas (Github):</string>
    <string name="about_txt_osmdroid"><a href="https://github.com/osmdroid/osmdroid">OSMDroid</a></string>
    <string name="about_txt_osmbonuspack"><a href="https://github.com/MKergall/osmbonuspack">OSMBonusPack</a></string>
    <string name="about_txt_showcaseview"><a href="https://github.com/amlcurran/ShowcaseView">ShowcaseView</a></string>
    <string name="about_txt_gson"><a href="https://github.com/google/gson">Gson</a></string>
    <string name="about_txt_materialdialogs"><a href="https://github.com/afollestad/material-dialogs">Material Dialogs</a></string>
    <string name="about_opt_title_project">Sobre o Projeto</string>
    <string name="about_opt_subtitle_project">Detalhes sobre a Equipe e mais</string>
    <string name="about_opt_title_code">Sobre o Código</string>
    <string name="about_opt_subtitle_code">Detalhes sobre as tecnologias usadas</string>
    <string name="act_permission_title">Permissões Necessárias</string>
    <string name="act_permission_subtitle_storage">
        Armazenamento:\nPara armazenar porções do mapa, reduzir consumo de dados e para uso offline;
    </string>
    <string name="act_permission_subtitle_location">
        Localização:\nPara mostrar a sua localização no mapa.
    </string>
    <string name="dialog_title">Ops…</string>
    <string name="error_connection_failed">Erro na conexão durante a requisição. Tente novamente.</string>
    <string name="btn_login_entrar">Entrar</string>
    <string name="msg_no_filter_results">Nenhum resultado foi encontrado nessa categoria.</string>
    <string name="msg_all_permissions_granted">Todas as permissões necessárias foram cedidas.</string>
    <string name="msg_request_storage_permission">A permissão de armazenamento é necessária para armazenar porções do mapa para reduzir consumo de dados e para uso offline.</string>
    <string name="msg_request_location_permission">A permissão de localização é necessária para mostrar a sua localização no mapa.</string>
    <string name="msg_request_both_permissions">A permissão de armazenamento é necessária para armazenar porções do mapa para reduzir consumo de dados e para uso offline.   E a permissão de localização é necessária para mostrar a sua localização no mapa.</string>
    <string name="search_filters">Filtros de Busca</string>
    <string name="title_activity_add_library">AddLibraryActivity</string>
    <string name="label_library_name">Nome da Biblioteca</string>
    <string name="label_search_building">Buscar Prédio</string>
    <string name="label_faculty_name">Nome da Faculdade</string>
    <string name="label_faculty_short_name">Abreviação do nome</string>
    <string name="label_faculty_principal">Nome do(a) diretor(a)</string>
    <string name="label_faculty_website">Site da Faculdade</string>
    <string name="label_crs_name">Nome do Curso</string>
    <string name="label_crs_code">Código do Curso</string>
    <string name="label_crs_duration">Duração (em anos)</string>
    <string name="label_course_level">Nível de Ensino</string>
    <string name="label_search_faculty">Buscar Faculdade</string>
    <string name="label_cpy_name">Nome da Xerox</string>
    <string name="label_cpy_owner">Nome do Proprietário</string>
    <string name="label_food_category">Categoria</string>
    <string name="label_misc_name">Nome do Local</string>
    <string name="label_misc_contact">Contato ou Responsável</string>
    <string name="label_misc_services">Serviço Ofertado</string>
    <string name="title_activity_add_laboratory">AddLaboratoryActivity</string>
    <string name="label_lab_name">Nome do Laboratório</string>
    <string name="label_lab_access">Acesso ao Laboratório</string>
    <string name="label_lab_category">Categoria</string>
    <string name="title_activity_about_project">AboutProjectActivity</string>
    <string name="title_activity_new_place_form" />
    <string name="label_btn_cancel">Cancelar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="holder_implement">Funcionalidade ainda não implementada</string>
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="desc_login_logo">Logo Smart UFPA</string>
    <string name="label_login_email">Email</string>
    <string name="label_login_password">Senha</string>
    <string name="label_btn_login">Login OpenStreetMap</string>
    <string name="label_btn_register">Ainda não tem conta? Crie agora!</string>
    <string name="label_food_price">Preço</string>
    <string name="label_price_cheap">$</string>
    <string name="label_price_expensive">$$$</string>
    <string name="label_food_quality">Qualidade</string>
    <string name="label_quality_bad">Ruim</string>
    <string name="label_quality_great">Ótima</string>
</resources>