<?xml version="1.0" encoding="utf-8"?>
<!--Stable Commit (20/09)-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/layout_left">

        <Button
            android:id="@+id/btn_mobility"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:text="@string/btn_mobility"
            android:layout_centerHorizontal="true"
            android:theme="@style/RaisedButton"
            />

        <Button
            android:id="@+id/btn_oportunities"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:text="@string/btn_oportunities"
            android:theme="@style/RaisedButtonDisabled"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_mobility"
            android:enabled="false"
            />

        <Button
            android:id="@+id/btn_security"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:text="@string/btn_safety"
            android:theme="@style/RaisedButtonDisabled"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_oportunities"
            android:enabled="false"
            />



    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_left"
        android:layout_above="@+id/layout_right"
        android:src="@drawable/logo_smartufpa_full"
        android:id="@+id/imageView2"
        android:layout_centerVertical="true"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_right"
        android:layout_alignParentBottom="true"
       >

        <Button
            android:id="@+id/btn_alimentation"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:text="@string/btn_alimentation"
            android:theme="@style/RaisedButtonDisabled"
            android:layout_centerHorizontal="true"
            android:enabled="false"
            />

        <Button
            android:id="@+id/btn_events"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:text="@string/btn_events"
            android:theme="@style/RaisedButtonDisabled"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_alimentation"
            android:enabled="false"
            />

        <Button
            android:id="@+id/btn_acessibility"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:text="@string/btn_accessibility"
            android:theme="@style/RaisedButtonDisabled"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_events"
            android:enabled="false"
            />



    </RelativeLayout>
</RelativeLayout>
