<?xml version="1.0" encoding="utf-8"?>
<!--TODO Adicionar layouts alternativos-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_width_height_normal_screen"
            android:layout_height="@dimen/img_width_height_normal_screen"
            android:src="@drawable/ic_drawable_permissions" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_permission_title"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/act_permission_subtitle_location"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/act_permission_subtitle_storage"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_grant_permissions"
            android:layout_marginTop="16dp"
            android:text="@string/btn_grant_permissions"
            android:theme="@style/RaisedButtonWhite"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        >

        <Button
            android:id="@+id/btn_perm_exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_exit"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />

        <Button
            android:id="@+id/btn_ready"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ready"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="invisible"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />

    </LinearLayout>
</RelativeLayout>